Change accuracy to recall

--- a/project.ipynb
+++ b/project.ipynb
@@ -105,20 +105,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8333333333333334\n"
+      "0.2727272727272727\n"
      ]
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import recall_score\n",
     "\n",
     "# Create a Random Forest Model\n",
     "random_classifier = RandomForestClassifier(\n",
@@ -131,7 +131,7 @@
     "predictions = random_classifier.predict(x_test)\n",
     "\n",
     "# Check the accuracy\n",
-    "print(accuracy_score(y_test, predictions))"
+    "print(recall_score(y_test, predictions, pos_label=-1))"
    ]
   }
  ],
