Improve notebook skeleton

--- a/project.ipynb
+++ b/project.ipynb
@@ -12,7 +12,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Understanding the problem in hands\n",
+    "### Business understanding\n",
+    "\n",
+    "Text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualizing the data\n",
+    "\n",
+    "Text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Processing the data\n",
+    "\n",
+    "#### Processing `account.csv`\n",
     "\n",
     "Text"
    ]
@@ -73,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Splitting the data for training\n",
+    "### Splitting the data for training\n",
     "\n",
     "Text"
    ]
