Improve notebook skeleton

--- a/project.ipynb
+++ b/project.ipynb
@@ -21,25 +21,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Visualizing the data\n",
+    "### Exploratory data analysis\n",
     "\n",
-    "Text"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Processing the data\n",
-    "\n",
-    "#### Processing `account.csv`\n",
-    "\n",
-    "Text"
+    "Let us start by importing the datasets."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3009/3455949170.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_8506/3455949170.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  transactions = pd.read_csv(DATA_SOURCE + 'trans_dev.csv', sep=';')\n"
      ]
     }
@@ -93,14 +82,196 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Splitting the data for training\n",
+    "Plenty of analysis with graphs, distributions, outliers..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data preprocessing\n",
+    "\n",
+    "Text\n",
+    "\n",
+    "#### Processing `account.csv`\n",
     "\n",
     "Text"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# process account.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Processing `card_dev.csv`\n",
+    "\n",
+    "Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# process card_dev.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Processing `client.csv`\n",
+    "\n",
+    "Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# process client.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Processing `disp.csv`\n",
+    "\n",
+    "Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# process disp.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Processing `district.csv`\n",
+    "\n",
+    "Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# process district.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Processing loan_dev.csv\n",
+    "\n",
+    "Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# process loan_dev.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Processing trans_dev.csv\n",
+    "\n",
+    "Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# process trans_dev.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Merging the data\n",
+    "\n",
+    "Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# merging"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Feature engineering\n",
+    "\n",
+    "Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# extract columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training the model\n",
+    "\n",
+    "Text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Splitting the data for training\n",
+    "\n",
+    "Text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,28 +289,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Training the model\n",
+    "#### Feeding the model\n",
     "\n",
     "Evaluate classification model performance with loans table"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8484848484848485\n",
-      "0.16666666666666669\n"
+      "0.2727272727272727\n"
      ]
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import accuracy_score, f1_score\n",
+    "from sklearn.metrics import recall_score\n",
     "\n",
     "# Create a Random Forest Model\n",
     "random_classifier = RandomForestClassifier(\n",
@@ -152,8 +322,16 @@
     "predictions = random_classifier.predict(x_test)\n",
     "\n",
     "# Check the accuracy\n",
-    "print(accuracy_score(y_test, predictions))\n",
-    "print(f1_score(y_test, predictions, pos_label=-1))"
+    "print(recall_score(y_test, predictions, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluating the model\n",
+    "\n",
+    "Text"
    ]
   }
  ],
@@ -178,7 +356,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "767d51c1340bd893661ea55ea3124f6de3c7a262a8b4abca0554b478b1e2ff90"
+    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
    }
   }
  },
