--- a/project.ipynb
+++ b/project.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_8506/3455949170.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\joaoj\\AppData\\Local\\Temp\\ipykernel_16464\\3455949170.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  transactions = pd.read_csv(DATA_SOURCE + 'trans_dev.csv', sep=';')\n"
      ]
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,14 +296,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.2727272727272727\n"
+      "0.1\n"
      ]
     }
    ],
@@ -323,6 +323,201 @@
     "\n",
     "# Check the accuracy\n",
     "print(recall_score(y_test, predictions, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Another Models..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fit Naive Bayes to the training set\n",
+    "\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "\n",
+    "classifier = GaussianNB()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "\n",
+    "# Predict test set results\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# SVM\n",
+    "\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "classifier = SVC()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "classifier = LogisticRegression()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neural_network import MLPClassifier\n",
+    "\n",
+    "classifier = MLPClassifier()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neural_network import BernoulliRBM\n",
+    "lassifier = BernoulliRBM()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "classifier = KNeighborsClassifier()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "classifier = MultinomialNB()\n",
+    "classifier.fit(x_train, y_train)\n",
+    "y_pred = classifier.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recall:  0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "classifiers = [ (\"cfl1\",LogisticRegression()),(\"cfl2\",SVC()),(\"cfl3\",GaussianNB()),(\"cfl4\",MultinomialNB()),(\"cfl5\",MLPClassifier())]\n",
+    "\n",
+    "from sklearn.ensemble import VotingClassifier\n",
+    "\n",
+    "v_c = VotingClassifier(estimators= classifiers, voting=\"hard\",n_jobs = -1)\n",
+    "v_c = v_c.fit(x_train,y_train)\n",
+    "y_pred = v_c.predict(x_test)\n",
+    "\n",
+    "print('Recall: ', recall_score(y_test, y_pred, pos_label=-1))"
    ]
   },
   {
@@ -356,7 +551,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
    }
   }
  },
