Check to some dates and merged more data with loans table

--- a/project.ipynb
+++ b/project.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_351512/2431196884.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\joaoj\\AppData\\Local\\Temp\\ipykernel_10956\\2431196884.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  transactions = pd.read_csv(DATA_SOURCE + 'trans_dev.csv', sep=';')\n"
      ]
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "4            2  "
       ]
      },
-     "execution_count": 630,
+     "execution_count": 319,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "4      577     3687  classic    94      2   15"
       ]
      },
-     "execution_count": 631,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 632,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "4          5            5    60      7    3  female"
       ]
      },
-     "execution_count": 632,
+     "execution_count": 321,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "4                          1  "
       ]
      },
-     "execution_count": 633,
+     "execution_count": 322,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": 323,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
        "4                      1.150649  "
       ]
      },
-     "execution_count": 634,
+     "execution_count": 323,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": 324,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "4    93      9    6  "
       ]
      },
-     "execution_count": 635,
+     "execution_count": 324,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 636,
+   "execution_count": 325,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "4    28.69      NaN  NaN         NaN    93      1   19  "
       ]
      },
-     "execution_count": 636,
+     "execution_count": 325,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": 326,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
        "4      577     3687   classic         94           2        15        3050"
       ]
      },
-     "execution_count": 637,
+     "execution_count": 326,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": 327,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1365,7 @@
        "4                      1.292553  "
       ]
      },
-     "execution_count": 638,
+     "execution_count": 327,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": 328,
    "metadata": {},
    "outputs": [
     {
@@ -1610,7 +1610,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 639,
+     "execution_count": 328,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1623,6 +1623,171 @@
     "# merge with disp with card\n",
     "# merge disp with account\n",
     "# merge stuff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking for loans done before the respective account is created"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 329,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx in loans.index:\n",
+    "    if (loans.iloc[idx]['year'] < loans.iloc[idx]['account_year']):\n",
+    "        print(\"Found!\")\n",
+    "        print(\"loan yy/mm/dd: \", loans.iloc[idx]['year'], \"/ \" , loans.iloc[idx]['month'],\"/ \", loans.iloc[idx]['day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['account_year'], \"/ \", loans.iloc[idx]['account_month'], \"/ \",loans.iloc[idx]['account_day'])\n",
+    "    else:\n",
+    "        if (loans.iloc[idx]['year'] == loans.iloc[idx]['account_year']):\n",
+    "            if (loans.iloc[idx]['month'] < loans.iloc[idx]['account_month']):\n",
+    "                print(\"Found!\")\n",
+    "                print(\"loan yy/mm/dd: \", loans.iloc[idx]['year'], \"/ \" , loans.iloc[idx]['month'],\"/ \", loans.iloc[idx]['day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['account_year'], \"/ \", loans.iloc[idx]['account_month'], \"/ \",loans.iloc[idx]['account_day'])\n",
+    "            else:\n",
+    "                if (loans.iloc[idx]['month'] == loans.iloc[idx]['account_month']):\n",
+    "                    if (loans.iloc[idx]['day'] < loans.iloc[idx]['account_day']):\n",
+    "                        print(\"Found!\")\n",
+    "                        print(\"loan yy/mm/dd: \", loans.iloc[idx]['year'], \"/ \" , loans.iloc[idx]['month'],\"/ \", loans.iloc[idx]['day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['account_year'], \"/ \", loans.iloc[idx]['account_month'], \"/ \",loans.iloc[idx]['account_day'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### It can be concluded that there isn't any loan done before an account is created"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The disposition and cards relations are merged, and then the resultant relation is merged with the loans table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 330,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index(['disp_id', 'client_id', 'account_id', 'disposition_type',\n",
+      "       'number_account_dispositions', 'number_account_disponents', 'card_id',\n",
+      "       'card_type', 'card_year', 'card_month', 'card_day', 'loan_id', 'amount',\n",
+      "       'duration_months', 'monthly_payment', 'status', 'year', 'month', 'day',\n",
+      "       'account_frequency', 'account_year', 'account_month', 'account_day',\n",
+      "       'district_no_inhabitants', 'district_no_cities',\n",
+      "       'district_urban_inhabitants_ratio', 'district_average_salary',\n",
+      "       'district_unemployment_rate', 'districts_entrepreneurs_ratio',\n",
+      "       'district_crimes_per_inhabitant', 'district_crime_growth',\n",
+      "       'district_unemploymant_growth'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
+   "source": [
+    "dispCards = dispositions.merge(cards, on=[\"disp_id\", \"account_id\"])\n",
+    "dispCards.rename(columns = {'type':'disposition_type'}, inplace = True)\n",
+    "loans = dispCards.merge(loans, on=\"account_id\")\n",
+    "print(loans.columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking if there are credit cards created before the creation of the account they are associated with"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 331,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx in loans.index:\n",
+    "    if (loans.iloc[idx]['card_year'] < loans.iloc[idx]['account_year']):\n",
+    "        print(\"Found!\")\n",
+    "        print(\"card yy/mm/dd: \", loans.iloc[idx]['card_year'], \"/ \" , loans.iloc[idx]['card_month'],\"/ \", loans.iloc[idx]['card_day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['account_year'], \"/ \", loans.iloc[idx]['account_month'], \"/ \",loans.iloc[idx]['account_day'])\n",
+    "    else:\n",
+    "        if (loans.iloc[idx]['card_year'] == loans.iloc[idx]['account_year']):\n",
+    "            if (loans.iloc[idx]['card_month'] < loans.iloc[idx]['account_month']):\n",
+    "                print(\"Found!\")\n",
+    "                print(\"card yy/mm/dd: \", loans.iloc[idx]['card_year'], \"/ \" , loans.iloc[idx]['card_month'],\"/ \", loans.iloc[idx]['card_day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['account_year'], \"/ \", loans.iloc[idx]['account_month'], \"/ \",loans.iloc[idx]['account_day'])\n",
+    "            else:\n",
+    "                if (loans.iloc[idx]['card_month'] == loans.iloc[idx]['account_month']):\n",
+    "                    if (loans.iloc[idx]['card_day'] < loans.iloc[idx]['account_day']):\n",
+    "                        print(\"Found!\")\n",
+    "                        print(\"card yy/mm/dd: \", loans.iloc[idx]['card_year'], \"/ \" , loans.iloc[idx]['card_month'],\"/ \", loans.iloc[idx]['card_day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['account_year'], \"/ \", loans.iloc[idx]['account_month'], \"/ \",loans.iloc[idx]['account_day'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### It can be concluded that there isn't any credit card created before the correspondent account is created"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Checking if there are credit cards more recent than the loans they are associated with "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 332,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for idx in loans.index:\n",
+    "    if (loans.iloc[idx]['year'] < loans.iloc[idx]['card_year']):\n",
+    "        print(\"Found!\")\n",
+    "        print(\"loan yy/mm/dd: \", loans.iloc[idx]['year'], \"/ \" , loans.iloc[idx]['month'],\"/ \", loans.iloc[idx]['day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['card_year'], \"/ \", loans.iloc[idx]['card_month'], \"/ \",loans.iloc[idx]['card_day'])\n",
+    "    else:\n",
+    "        if (loans.iloc[idx]['year'] == loans.iloc[idx]['card_year']):\n",
+    "            if (loans.iloc[idx]['month'] < loans.iloc[idx]['card_month']):\n",
+    "                print(\"Found!\")\n",
+    "                print(\"loan yy/mm/dd: \", loans.iloc[idx]['year'], \"/ \" , loans.iloc[idx]['month'],\"/ \", loans.iloc[idx]['day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['card_year'], \"/ \", loans.iloc[idx]['card_month'], \"/ \",loans.iloc[idx]['card_day'])\n",
+    "            else:\n",
+    "                if (loans.iloc[idx]['month'] == loans.iloc[idx]['card_month']):\n",
+    "                    if (loans.iloc[idx]['day'] < loans.iloc[idx]['card_day']):\n",
+    "                        print(\"Found!\")\n",
+    "                        print(\"loan yy/mm/dd: \", loans.iloc[idx]['year'], \"/ \" , loans.iloc[idx]['month'],\"/ \", loans.iloc[idx]['day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['card_year'], \"/ \", loans.iloc[idx]['card_month'], \"/ \",loans.iloc[idx]['card_day'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### It can be concluded that there isn't any credit card more recent than the loan it is associated with"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 304,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RangeIndex(start=0, stop=328, step=1)"
+      ]
+     },
+     "execution_count": 304,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# loans.index"
    ]
   },
   {
@@ -1643,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 640,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1988,7 @@
        "4                      1.292553              2244.168398  "
       ]
      },
-     "execution_count": 640,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1837,7 +2002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 641,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1855,7 +2020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 642,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1905,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 664,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1932,18 +2097,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 675,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
-      "  1  1 -1  1  1 -1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1  1  1  1\n",
-      "  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1]\n",
-      "0.0\n",
-      "0.7727272727272727\n"
+      "[ 1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1\n",
+      "  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
+      "  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1 -1  1  1]\n",
+      "0.09090909090909091\n",
+      "0.8181818181818182\n"
      ]
     }
    ],
@@ -1999,7 +2164,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
+    "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
    }
   }
  },
