Split some work into files

--- a/project.ipynb
+++ b/project.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_351512/2431196884.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_20669/2431196884.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  transactions = pd.read_csv(DATA_SOURCE + 'trans_dev.csv', sep=';')\n"
      ]
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -200,16 +200,14 @@
        "4            2  "
       ]
      },
-     "execution_count": 630,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import src.preprocess as pp\n",
-    "\n",
-    "pp.extract_date(accounts, \"date\")\n",
-    "accounts.rename(columns={\"frequency\": \"account_frequency\", \"year\": \"account_year\", \"month\": \"account_month\", \"day\": \"account_day\"}, inplace=True)\n",
+    "import src.preprocess.accounts as accpp\n",
+    "accounts = accpp.preprocess_accounts(accounts)\n",
     "accounts.head()"
    ]
   },
@@ -226,104 +224,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>card_id</th>\n",
-       "      <th>disp_id</th>\n",
-       "      <th>type</th>\n",
-       "      <th>year</th>\n",
-       "      <th>month</th>\n",
-       "      <th>day</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1005</td>\n",
-       "      <td>9285</td>\n",
-       "      <td>classic</td>\n",
-       "      <td>93</td>\n",
-       "      <td>11</td>\n",
-       "      <td>7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>104</td>\n",
-       "      <td>588</td>\n",
-       "      <td>classic</td>\n",
-       "      <td>94</td>\n",
-       "      <td>1</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>747</td>\n",
-       "      <td>4915</td>\n",
-       "      <td>classic</td>\n",
-       "      <td>94</td>\n",
-       "      <td>2</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>70</td>\n",
-       "      <td>439</td>\n",
-       "      <td>classic</td>\n",
-       "      <td>94</td>\n",
-       "      <td>2</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>577</td>\n",
-       "      <td>3687</td>\n",
-       "      <td>classic</td>\n",
-       "      <td>94</td>\n",
-       "      <td>2</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   card_id  disp_id     type  year  month  day\n",
-       "0     1005     9285  classic    93     11    7\n",
-       "1      104      588  classic    94      1   19\n",
-       "2      747     4915  classic    94      2    5\n",
-       "3       70      439  classic    94      2    8\n",
-       "4      577     3687  classic    94      2   15"
-      ]
-     },
-     "execution_count": 631,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'preprocess_cards' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn [3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m cards \u001b[38;5;241m=\u001b[39m \u001b[43mpreprocess_cards\u001b[49m(cards)\n\u001b[1;32m      2\u001b[0m cards\u001b[38;5;241m.\u001b[39mhead()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'preprocess_cards' is not defined"
+     ]
     }
    ],
    "source": [
-    "cards = pp.extract_date(cards, \"issued\")\n",
+    "from src.preprocess.cards import preprocess_cards\n",
+    "\n",
+    "cards = preprocess_cards(cards)\n",
     "cards.head()"
    ]
   },
@@ -338,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 632,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -429,14 +348,16 @@
        "4          5            5    60      7    3  female"
       ]
      },
-     "execution_count": 632,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "client = pp.extract_date(clients, \"birth_number\", True)\n",
-    "client.head()"
+    "from src.preprocess.clients import preprocess_clients\n",
+    "\n",
+    "clients = preprocess_clients(clients)\n",
+    "clients.head()"
    ]
   },
   {
@@ -452,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +471,7 @@
        "4                          1  "
       ]
      },
-     "execution_count": 633,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +642,7 @@
        "4                      1.150649  "
       ]
      },
-     "execution_count": 634,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -872,12 +793,14 @@
        "4    93      9    6  "
       ]
      },
-     "execution_count": 635,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "import src.preprocess.util as pp\n",
+    "\n",
     "loans = pp.extract_date(loans, \"date\")\n",
     "loans = pp.korunas_to_euros(loans, \"amount\")\n",
     "loans = pp.korunas_to_euros(loans, \"payments\")\n",
@@ -900,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 636,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +957,7 @@
        "4    28.69      NaN  NaN         NaN    93      1   19  "
       ]
      },
-     "execution_count": 636,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1085,7 @@
        "4      577     3687   classic         94           2        15        3050"
       ]
      },
-     "execution_count": 637,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1288,7 @@
        "4                      1.292553  "
       ]
      },
-     "execution_count": 638,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1610,7 +1533,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 639,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1643,7 +1566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 640,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1823,7 +1746,7 @@
        "4                      1.292553              2244.168398  "
       ]
      },
-     "execution_count": 640,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1837,7 +1760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 641,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1855,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 642,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1905,7 +1828,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 664,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1932,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 675,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1940,10 +1863,10 @@
      "output_type": "stream",
      "text": [
       "[ 1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
-      "  1  1 -1  1  1 -1  1  1  1  1  1 -1  1  1  1  1  1  1  1  1  1  1  1  1\n",
+      "  1  1 -1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1\n",
       "  1  1  1  1  1  1  1  1  1  1  1  1  1  1  1 -1  1  1]\n",
       "0.0\n",
-      "0.7727272727272727\n"
+      "0.803030303030303\n"
      ]
     }
    ],
@@ -1994,7 +1917,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
