--- a/project.ipynb
+++ b/project.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\joaoj\\AppData\\Local\\Temp\\ipykernel_10956\\2431196884.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\joaoj\\AppData\\Local\\Temp\\ipykernel_16084\\2431196884.py:13: DtypeWarning: Columns (8) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  transactions = pd.read_csv(DATA_SOURCE + 'trans_dev.csv', sep=';')\n"
      ]
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -200,7 +200,7 @@
        "4            2  "
       ]
      },
-     "execution_count": 319,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
        "4      577     3687  classic    94      2   15"
       ]
      },
-     "execution_count": 320,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +429,7 @@
        "4          5            5    60      7    3  female"
       ]
      },
-     "execution_count": 321,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 322,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +550,7 @@
        "4                          1  "
       ]
      },
-     "execution_count": 322,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +721,7 @@
        "4                      1.150649  "
       ]
      },
-     "execution_count": 323,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,7 @@
        "4    93      9    6  "
       ]
      },
-     "execution_count": 324,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +900,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "4    28.69      NaN  NaN         NaN    93      1   19  "
       ]
      },
-     "execution_count": 325,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1065,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1162,7 +1162,7 @@
        "4      577     3687   classic         94           2        15        3050"
       ]
      },
-     "execution_count": 326,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1191,7 +1191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1365,7 +1365,7 @@
        "4                      1.292553  "
       ]
      },
-     "execution_count": 327,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1610,7 +1610,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 328,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1629,36 +1629,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Checking for loans done before the respective account is created"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 329,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for idx in loans.index:\n",
-    "    if (loans.iloc[idx]['year'] < loans.iloc[idx]['account_year']):\n",
-    "        print(\"Found!\")\n",
-    "        print(\"loan yy/mm/dd: \", loans.iloc[idx]['year'], \"/ \" , loans.iloc[idx]['month'],\"/ \", loans.iloc[idx]['day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['account_year'], \"/ \", loans.iloc[idx]['account_month'], \"/ \",loans.iloc[idx]['account_day'])\n",
-    "    else:\n",
-    "        if (loans.iloc[idx]['year'] == loans.iloc[idx]['account_year']):\n",
-    "            if (loans.iloc[idx]['month'] < loans.iloc[idx]['account_month']):\n",
-    "                print(\"Found!\")\n",
-    "                print(\"loan yy/mm/dd: \", loans.iloc[idx]['year'], \"/ \" , loans.iloc[idx]['month'],\"/ \", loans.iloc[idx]['day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['account_year'], \"/ \", loans.iloc[idx]['account_month'], \"/ \",loans.iloc[idx]['account_day'])\n",
-    "            else:\n",
-    "                if (loans.iloc[idx]['month'] == loans.iloc[idx]['account_month']):\n",
-    "                    if (loans.iloc[idx]['day'] < loans.iloc[idx]['account_day']):\n",
-    "                        print(\"Found!\")\n",
-    "                        print(\"loan yy/mm/dd: \", loans.iloc[idx]['year'], \"/ \" , loans.iloc[idx]['month'],\"/ \", loans.iloc[idx]['day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['account_year'], \"/ \", loans.iloc[idx]['account_month'], \"/ \",loans.iloc[idx]['account_day'])\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###### It can be concluded that there isn't any loan done before an account is created"
+    "Checking for loans done before the respective account is created (not needed!)"
    ]
   },
   {
@@ -1670,68 +1641,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['disp_id', 'client_id', 'account_id', 'disposition_type',\n",
-      "       'number_account_dispositions', 'number_account_disponents', 'card_id',\n",
-      "       'card_type', 'card_year', 'card_month', 'card_day', 'loan_id', 'amount',\n",
-      "       'duration_months', 'monthly_payment', 'status', 'year', 'month', 'day',\n",
-      "       'account_frequency', 'account_year', 'account_month', 'account_day',\n",
-      "       'district_no_inhabitants', 'district_no_cities',\n",
-      "       'district_urban_inhabitants_ratio', 'district_average_salary',\n",
-      "       'district_unemployment_rate', 'districts_entrepreneurs_ratio',\n",
-      "       'district_crimes_per_inhabitant', 'district_crime_growth',\n",
-      "       'district_unemploymant_growth'],\n",
-      "      dtype='object')\n"
+      "no. Int64Index([  0,   1,   2,   3,   4,   5,   6,   7,   8,   9,\n",
+      "            ...\n",
+      "            167, 168, 169, 170, 171, 172, 173, 174, 175, 176],\n",
+      "           dtype='int64', length=177)\n",
+      "Owners no.  0\n",
+      "On a total of:  Int64Index([  0,   1,   2,   3,   4,   5,   6,   7,   8,   9,\n",
+      "            ...\n",
+      "            167, 168, 169, 170, 171, 172, 173, 174, 175, 176],\n",
+      "           dtype='int64', length=177)\n"
      ]
     }
    ],
    "source": [
     "dispCards = dispositions.merge(cards, on=[\"disp_id\", \"account_id\"])\n",
+    "# print(\"Disposition: \", dispositions.columns)\n",
+    "# print(\"cards: \", cards.columns )\n",
+    "print(\"no.\" , dispCards.index)\n",
     "dispCards.rename(columns = {'type':'disposition_type'}, inplace = True)\n",
-    "loans = dispCards.merge(loans, on=\"account_id\")\n",
-    "print(loans.columns)"
+    "test = dispCards['disposition_type'] != 'OWNER'\n",
+    "count = 0\n",
+    "for entry in test.index:\n",
+    "    if (test[entry] == True):\n",
+    "        count+=1\n",
+    "        print(dispCards.iloc[entry])\n",
+    "print(\"Owners no. \", count) #31\n",
+    "print(\"On a total of: \", test.index )\n",
+    "\n",
+    "# loans = dispCards.merge(loans, on=\"account_id\")\n",
+    "# loans.head()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Checking if there are credit cards created before the creation of the account they are associated with"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 331,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for idx in loans.index:\n",
-    "    if (loans.iloc[idx]['card_year'] < loans.iloc[idx]['account_year']):\n",
-    "        print(\"Found!\")\n",
-    "        print(\"card yy/mm/dd: \", loans.iloc[idx]['card_year'], \"/ \" , loans.iloc[idx]['card_month'],\"/ \", loans.iloc[idx]['card_day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['account_year'], \"/ \", loans.iloc[idx]['account_month'], \"/ \",loans.iloc[idx]['account_day'])\n",
-    "    else:\n",
-    "        if (loans.iloc[idx]['card_year'] == loans.iloc[idx]['account_year']):\n",
-    "            if (loans.iloc[idx]['card_month'] < loans.iloc[idx]['account_month']):\n",
-    "                print(\"Found!\")\n",
-    "                print(\"card yy/mm/dd: \", loans.iloc[idx]['card_year'], \"/ \" , loans.iloc[idx]['card_month'],\"/ \", loans.iloc[idx]['card_day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['account_year'], \"/ \", loans.iloc[idx]['account_month'], \"/ \",loans.iloc[idx]['account_day'])\n",
-    "            else:\n",
-    "                if (loans.iloc[idx]['card_month'] == loans.iloc[idx]['account_month']):\n",
-    "                    if (loans.iloc[idx]['card_day'] < loans.iloc[idx]['account_day']):\n",
-    "                        print(\"Found!\")\n",
-    "                        print(\"card yy/mm/dd: \", loans.iloc[idx]['card_year'], \"/ \" , loans.iloc[idx]['card_month'],\"/ \", loans.iloc[idx]['card_day'], \"vs acc yy/mm/dd: \", loans.iloc[idx]['account_year'], \"/ \", loans.iloc[idx]['account_month'], \"/ \",loans.iloc[idx]['account_day'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###### It can be concluded that there isn't any credit card created before the correspondent account is created"
+    "Checking if there are credit cards created before the creation of the account they are associated with (not needed!)"
    ]
   },
   {
@@ -1743,7 +1695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 393,
    "metadata": {},
    "outputs": [],
    "source": [
